fixed visibility issue when panel has no tabs

--- a/src/shell/shell.component.less
+++ b/src/shell/shell.component.less
@@ -93,6 +93,7 @@
 }
 
 .alt {
+    height: 30%;
     margin: 0;
     padding: 0;
     border: 0;
